--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_destination_ride.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_destination_ride.xml
@@ -31,8 +31,8 @@
             android:layout_toEndOf="@+id/backBtn"
             android:gravity="center"
             android:maxHeight="45dp"
-            android:textAllCaps="true"
             android:text="@string/dest_trip"
+            android:textAllCaps="true"
             app:autoSizeTextType="uniform" />
 
         <ImageView
@@ -60,132 +60,140 @@
         android:layout_below="@+id/topRl">
 
         <LinearLayout
-            android:id="@+id/destRideEnabledView"
+            android:id="@+id/llSavedDest"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:visibility="gone"
-            android:padding="15dp">
+            android:animateLayoutChanges="true"
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:id="@+id/linearLayoutContent"
+                android:id="@+id/destRideEnabledView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/background_wallet_border"
+                android:animateLayoutChanges="true"
                 android:orientation="vertical"
-                android:splitMotionEvents="false">
+                android:padding="15dp"
+                android:visibility="visible">
 
-                <TextView
-                    android:id="@+id/textViewSearchName"
+                <LinearLayout
+                    android:id="@+id/linearLayoutContent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_marginTop="15dp"
-                    android:text="@string/name"
-                    android:fontFamily="@font/maven_pro_medium"
-                    android:textSize="19sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/textViewSearchAddress"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:maxLines="1"
-                    android:layout_marginTop="10dp"
-                    android:text="sadcew"
-                    android:layout_marginBottom="20dp"
-                    android:textColor="@color/text_color_light"
-                    android:textSize="15sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/background_wallet_border"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="10dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:fontFamily="@font/maven_pro_medium"
-                    android:gravity="center"
-                    android:text="Time Remaining"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-
-                    />
-
-                <RelativeLayout
-                    android:id="@+id/llRideEndTotalFareTakeCash"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp">
+                    android:background="@drawable/background_wallet_border"
+                    android:orientation="vertical"
+                    android:splitMotionEvents="false">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:id="@+id/textViewSearchName"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="30dp"
-                        android:layout_toStartOf="@id/ivDivRideEndTakeCash"
+                        android:layout_marginTop="15dp"
+                        android:layout_weight="1"
                         android:fontFamily="@font/maven_pro_medium"
-                        android:text="Hour"
-                        android:textSize="24sp"
+                        android:gravity="center"
+                        android:text="@string/name"
+                        android:textSize="19sp"
                         android:textStyle="bold" />
 
-                    <View
-                        android:id="@+id/ivDivRideEndTakeCash"
-                        android:layout_width="1dp"
-                        android:layout_height="50dp"
-                        android:layout_marginTop="7dp"
-                        android:layout_marginBottom="7dp"
-                        android:layout_centerInParent="true"
-                        android:background="@color/grey_dark"
+                    <TextView
+                        android:id="@+id/textViewSearchAddress"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="20dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:maxLines="1"
+                        android:text="sadcew"
+                        android:textColor="@color/text_color_light"
+                        android:textSize="15sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/background_wallet_border"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:fontFamily="@font/maven_pro_medium"
+                        android:gravity="center"
+                        android:text="Time Remaining"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
 
                         />
 
-                    <TextView
-                        android:id="@+id/tvTimer"
-                        android:layout_width="wrap_content"
+                    <RelativeLayout
+                        android:id="@+id/llRideEndTotalFareTakeCash"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginStart="30dp"
-                        android:layout_toEndOf="@id/ivDivRideEndTakeCash"
-                        android:fontFamily="@font/maven_pro_medium"
-                        android:text="05:30"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
-                </RelativeLayout>
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginEnd="50dp"
+                            android:layout_toStartOf="@id/ivDivRideEndTakeCash"
+                            android:fontFamily="@font/maven_pro_medium"
+                            android:text="Hour"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
+
+                        <View
+                            android:id="@+id/ivDivRideEndTakeCash"
+                            android:layout_width="1dp"
+                            android:layout_height="50dp"
+                            android:layout_centerInParent="true"
+                            android:layout_marginTop="7dp"
+                            android:layout_marginBottom="7dp"
+                            android:background="@color/grey_dark"
+
+                            />
+
+                        <TextView
+                            android:id="@+id/tvTimer"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginStart="30dp"
+                            android:layout_toEndOf="@id/ivDivRideEndTakeCash"
+                            android:fontFamily="@font/maven_pro_medium"
+                            android:text="05:30"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
+                    </RelativeLayout>
+                </LinearLayout>
+
             </LinearLayout>
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvSavedDest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="5dp"
+                android:orientation="vertical"
+                tools:itemCount="4"
+                tools:listitem="@layout/content_destination_ride" />
         </LinearLayout>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvSavedDest"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/destRideEnabledView"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="5dp"
-            android:orientation="vertical"
-            tools:itemCount="4"
-            tools:listitem="@layout/content_destination_ride" />
 
         <TextView
             android:id="@+id/tvSetDestRide"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_below="@id/rvSavedDest"
+            android:layout_below="@id/llSavedDest"
             android:layout_marginStart="20dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="20dp"
