--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/content_destination_ride.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/content_destination_ride.xml
@@ -41,15 +41,15 @@
         >
 
         <TextView
-            android:layout_weight="1"
             android:id="@+id/textViewSearchName"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="43dp"
+            android:layout_weight="1"
+            android:gravity="start|center_vertical"
             android:text="@string/name"
-            android:textStyle="bold"
-            android:gravity="center"
             android:textColor="@color/text_color_light_selector"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_weight="1"
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:text="sadcew"
             android:maxLines="1"
-            android:gravity="center"
+            android:gravity="start|center_vertical"
             android:textColor="@color/text_color_light"
             android:textSize="12sp"
             />
