--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -325,6 +325,15 @@
                     android:text="@string/dest_ride"
                     android:textColor="@color/white"
                     android:textSize="36px"/>
+                <ImageView
+                    android:id="@+id/ivDestRideToggle"
+                    android:layout_width="90px"
+                    android:layout_height="72px"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="20px"
+                    android:src="@drawable/toggle_on_v2"
+                    android:tag="mwar"/>
 
             </RelativeLayout>
 
